--- a/.env
+++ b/.env
@@ -25,4 +25,5 @@ GMAIL_USER=rcmiranda.empresa@gmail.com
 GMAIL_PASS=mjiovnlywrxgowev
 CONFIRMATION_EMAIL_USER=geral@1way.pt
 CONFIRMATION_EMAIL_PASS=Fcporto11111* 
+EMAIL_RECEIVER=geral@1way.pt
 
