--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#DB_HOST=trolley.proxy.rlwy.net
+#DB_HOST=postgres.railway.internal
 #DB_PORT=10849
 #DB_USER=postgres
 #DB_PASSWORD=BhPRxPCVwVgZiqAeqrBTIlvBucfkHyLJ
@@ -16,14 +16,14 @@
 #CONFIRMATION_EMAIL_PASS=Fcporto11111*
 
 
-DB_HOST=localhost
-DB_PORT=5432
+DB_HOST=hopper.proxy.rlwy.net
+DB_PORT=52089
 DB_USER=postgres
-DB_PASSWORD=
-DB_NAME=jpc
+DB_PASSWORD=lnVZUFPqKRoBZMLyKgZHnLfSGxyoRCVc
+DB_NAME=railway
 GMAIL_USER=rcmiranda.empresa@gmail.com
 GMAIL_PASS=mjiovnlywrxgowev
 CONFIRMATION_EMAIL_USER=geral@1way.pt
-CONFIRMATION_EMAIL_PASS=Fcporto11111* 
+CONFIRMATION_EMAIL_PASS=Fcporto11111*
 EMAIL_RECEIVER=geral@1way.pt
 
