alteracoes com sucesso

--- a/.env
+++ b/.env
@@ -16,11 +16,11 @@
 #CONFIRMATION_EMAIL_PASS=Fcporto11111*
 
 
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgre
-DB_PASSWORD=
-DB_NAME=jpc
+DB_USER=postgres
+DB_PASSWORD=lnVZUFPqKRoBZMLyKgZHnLfSGxyoRCVc
+DB_HOST=hopper.proxy.rlwy.net
+DB_PORT=52089
+DB_NAME=railway
 GMAIL_USER=rcmiranda.empresa@gmail.com
 GMAIL_PASS=mjiovnlywrxgowev
 CONFIRMATION_EMAIL_USER=geral@1way.pt
